fixed card spacing and nav z-index

--- a/src/stylesheets/modules/_cards.scss
+++ b/src/stylesheets/modules/_cards.scss
@@ -1,10 +1,10 @@
 .card {
-    flex: 1 1 50%;
-    position: relative;
+    /*flex: 1 1 50%;*/  
     border: 1px solid #efefef;
     box-shadow: 2px 6px 25px rgba(0,0,0,0.1);
     transition: all 0.3s ease;
     position: relative;
+    margin: 0 5%;
     &:hover {
         box-shadow: 2px 6px 30px rgba(0,0,0,0.2);
     }
@@ -56,7 +56,7 @@
     justify-content: space-around;    
 }
 
-.options a{
+.options a {
     color: $card-text;
     &:hover {
         color: #222222;
