--- a/src/stylesheets/modules/_navigation.scss
+++ b/src/stylesheets/modules/_navigation.scss
@@ -7,6 +7,7 @@ nav {
     justify-content: flex-end;
     align-items: center;
     transition: all 0.2s cubic-bezier(0.44, 0.05, 1, 1);
+    z-index: 2;
     ul {
         list-style: none;
         margin: 0;
